--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,27 @@
 .chord {
   max-width: 25%;
-  min-width: 15%;
+  min-width: 360px;
+}
+
+html,
+body,
+body > div,
+body > div > div {
+  height: 100%;
+}
+
+.page-wrapper {
+  min-height: 100%;
+  margin-bottom: -3rem;
+}
+
+main {
+  margin-bottom: 3rem;
+}
+
+footer {
+  background: #f5f5f5;
+  width: 100%;
+  height: 3rem;
+  line-height: 3rem;
 }
